--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,18 @@ doctype html
 html
   head
     title= title
+    meta(name = 'theme-color', content = '#ffffff')
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name = "viewport", content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel='stylesheet', src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+    link(rel='stylesheet', src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
+    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
   body
-    block content
+    .navbar.navbar-default
+      p
+        h1 Email Service
+    .container
+      block content
