Change api routes

--- a/views/index.pug
+++ b/views/index.pug
@@ -39,6 +39,8 @@ block content
       pre node bin/consumer
 
       h1#request Request
+      h3#Endpoint for Requests:
+      pre http://www.beabys.xyz/mail/api/v1
       p Methods available for Request :
         | POST
         | GET
@@ -217,6 +219,10 @@ block content
           a(href='https://github.com/beabys/emailService/blob/master/docs/php.md') Php
         li
           a(href='https://github.com/beabys/emailService/blob/master/docs/ruby.md') Ruby
+      h4 You can test the service leaving a message in this url
+      a(href='http://www.alfonsorodriguez.xyz/contact')
+        pre http://www.alfonsorodriguez.xyz/contact
+
       h2#author Author
       p
         | This Email Service was created by Alfonso Rodriguez (
